// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadArea should handle "dragleave" event 1`] = `
<UploadArea
  fileRole="скан"
  formats="PDF, JPG, PNG"
  sizeLimit="4 Mb"
>
  <div
    className="root active"
    data-testid="upload-area"
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    <SvgUpload
      fill="#c2c2c2"
    >
      <svg
        fill="#c2c2c2"
        height={64}
        viewBox="0 0 64 64"
        width={64}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M57.247 30.434a9.405 9.405 0 00-5.575-2.666c.021-.367.032-.735.032-1.101C51.704 16.374 43.33 8 33.037 8c-8.41 0-15.689 5.537-17.958 13.555C8.807 22.237 4 27.564 4 33.961c0 6.862 5.583 12.48 12.445 12.48h7.259a1.037 1.037 0 000-2.075h-7.26c-5.718 0-10.37-4.687-10.37-10.405 0-5.546 4.336-10.113 9.87-10.376.461-.022.851-.354.96-.802a16.54 16.54 0 0116.133-12.704c9.149 0 16.593 7.441 16.593 16.59 0 .652-.038 1.309-.114 1.953-.034.295.059.623.255.844.197.221.48.381.775.381h.002c1.993 0 3.853.722 5.24 2.095a7.207 7.207 0 012.138 5.147c0 4.003-3.257 7.277-7.26 7.277H42.37a1.037 1.037 0 000 2.074h8.297c5.146 0 9.333-4.222 9.333-9.368 0-2.5-.977-4.881-2.753-6.638z"
          fill="#C2C2C2"
        />
        <path
          clipRule="evenodd"
          d="M33 31.852a1 1 0 011 1v22a1 1 0 11-2 0v-22a1 1 0 011-1z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
        <path
          clipRule="evenodd"
          d="M39.732 39.12a1 1 0 01-1.413.05l-6-5.586a1 1 0 011.362-1.464l6 5.586a1 1 0 01.05 1.413z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
        <path
          clipRule="evenodd"
          d="M26.268 39.12a1 1 0 001.413.05l6-5.586a1 1 0 00-1.362-1.464l-6 5.586a1 1 0 00-.05 1.413z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
      </svg>
    </SvgUpload>
    <div
      className="info-column"
    >
      <div
        className="info primary"
      >
        Перетащите или
         
        <label>
          <input
            className="input"
            data-testid="upload-area:input"
            onChange={[Function]}
            type="file"
          />
          <ForwardRef(Link)
            data-testid="upload-area:anchor"
            pseudo={true}
          >
            <a
              className="link basic-blue"
              data-testid="upload-area:anchor"
              role="button"
              tabIndex={0}
            >
              загрузите 
              скан
            </a>
          </ForwardRef(Link)>
        </label>
      </div>
      <div
        className="info secondary"
      >
        1 файл, формат PDF, JPG, PNG, до 4 Mb
      </div>
    </div>
  </div>
</UploadArea>
`;

exports[`UploadArea should handle "dragleave" event 2`] = `
<UploadArea
  fileRole="скан"
  formats="PDF, JPG, PNG"
  sizeLimit="4 Mb"
>
  <div
    className="root"
    data-testid="upload-area"
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    <SvgUpload
      fill="#c2c2c2"
    >
      <svg
        fill="#c2c2c2"
        height={64}
        viewBox="0 0 64 64"
        width={64}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M57.247 30.434a9.405 9.405 0 00-5.575-2.666c.021-.367.032-.735.032-1.101C51.704 16.374 43.33 8 33.037 8c-8.41 0-15.689 5.537-17.958 13.555C8.807 22.237 4 27.564 4 33.961c0 6.862 5.583 12.48 12.445 12.48h7.259a1.037 1.037 0 000-2.075h-7.26c-5.718 0-10.37-4.687-10.37-10.405 0-5.546 4.336-10.113 9.87-10.376.461-.022.851-.354.96-.802a16.54 16.54 0 0116.133-12.704c9.149 0 16.593 7.441 16.593 16.59 0 .652-.038 1.309-.114 1.953-.034.295.059.623.255.844.197.221.48.381.775.381h.002c1.993 0 3.853.722 5.24 2.095a7.207 7.207 0 012.138 5.147c0 4.003-3.257 7.277-7.26 7.277H42.37a1.037 1.037 0 000 2.074h8.297c5.146 0 9.333-4.222 9.333-9.368 0-2.5-.977-4.881-2.753-6.638z"
          fill="#C2C2C2"
        />
        <path
          clipRule="evenodd"
          d="M33 31.852a1 1 0 011 1v22a1 1 0 11-2 0v-22a1 1 0 011-1z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
        <path
          clipRule="evenodd"
          d="M39.732 39.12a1 1 0 01-1.413.05l-6-5.586a1 1 0 011.362-1.464l6 5.586a1 1 0 01.05 1.413z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
        <path
          clipRule="evenodd"
          d="M26.268 39.12a1 1 0 001.413.05l6-5.586a1 1 0 00-1.362-1.464l-6 5.586a1 1 0 00-.05 1.413z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
      </svg>
    </SvgUpload>
    <div
      className="info-column"
    >
      <div
        className="info primary"
      >
        Перетащите или
         
        <label>
          <input
            className="input"
            data-testid="upload-area:input"
            onChange={[Function]}
            type="file"
          />
          <ForwardRef(Link)
            data-testid="upload-area:anchor"
            pseudo={true}
          >
            <a
              className="link basic-blue"
              data-testid="upload-area:anchor"
              role="button"
              tabIndex={0}
            >
              загрузите 
              скан
            </a>
          </ForwardRef(Link)>
        </label>
      </div>
      <div
        className="info secondary"
      >
        1 файл, формат PDF, JPG, PNG, до 4 Mb
      </div>
    </div>
  </div>
</UploadArea>
`;

exports[`UploadArea should handle drag events to highlight area 1`] = `
<UploadArea
  fileRole="скан"
  formats="PDF, JPG, PNG"
  onSelect={[MockFunction]}
  sizeLimit="4 Mb"
>
  <div
    className="root"
    data-testid="upload-area"
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    <SvgUpload
      fill="#c2c2c2"
    >
      <svg
        fill="#c2c2c2"
        height={64}
        viewBox="0 0 64 64"
        width={64}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M57.247 30.434a9.405 9.405 0 00-5.575-2.666c.021-.367.032-.735.032-1.101C51.704 16.374 43.33 8 33.037 8c-8.41 0-15.689 5.537-17.958 13.555C8.807 22.237 4 27.564 4 33.961c0 6.862 5.583 12.48 12.445 12.48h7.259a1.037 1.037 0 000-2.075h-7.26c-5.718 0-10.37-4.687-10.37-10.405 0-5.546 4.336-10.113 9.87-10.376.461-.022.851-.354.96-.802a16.54 16.54 0 0116.133-12.704c9.149 0 16.593 7.441 16.593 16.59 0 .652-.038 1.309-.114 1.953-.034.295.059.623.255.844.197.221.48.381.775.381h.002c1.993 0 3.853.722 5.24 2.095a7.207 7.207 0 012.138 5.147c0 4.003-3.257 7.277-7.26 7.277H42.37a1.037 1.037 0 000 2.074h8.297c5.146 0 9.333-4.222 9.333-9.368 0-2.5-.977-4.881-2.753-6.638z"
          fill="#C2C2C2"
        />
        <path
          clipRule="evenodd"
          d="M33 31.852a1 1 0 011 1v22a1 1 0 11-2 0v-22a1 1 0 011-1z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
        <path
          clipRule="evenodd"
          d="M39.732 39.12a1 1 0 01-1.413.05l-6-5.586a1 1 0 011.362-1.464l6 5.586a1 1 0 01.05 1.413z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
        <path
          clipRule="evenodd"
          d="M26.268 39.12a1 1 0 001.413.05l6-5.586a1 1 0 00-1.362-1.464l-6 5.586a1 1 0 00-.05 1.413z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
      </svg>
    </SvgUpload>
    <div
      className="info-column"
    >
      <div
        className="info primary"
      >
        Перетащите или
         
        <label>
          <input
            className="input"
            data-testid="upload-area:input"
            onChange={[Function]}
            type="file"
          />
          <ForwardRef(Link)
            data-testid="upload-area:anchor"
            pseudo={true}
          >
            <a
              className="link basic-blue"
              data-testid="upload-area:anchor"
              role="button"
              tabIndex={0}
            >
              загрузите 
              скан
            </a>
          </ForwardRef(Link)>
        </label>
      </div>
      <div
        className="info secondary"
      >
        1 файл, формат PDF, JPG, PNG, до 4 Mb
      </div>
    </div>
  </div>
</UploadArea>
`;

exports[`UploadArea should handle drag events to highlight area 2`] = `
<UploadArea
  fileRole="скан"
  formats="PDF, JPG, PNG"
  onSelect={[MockFunction]}
  sizeLimit="4 Mb"
>
  <div
    className="root active"
    data-testid="upload-area"
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    <SvgUpload
      fill="#c2c2c2"
    >
      <svg
        fill="#c2c2c2"
        height={64}
        viewBox="0 0 64 64"
        width={64}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M57.247 30.434a9.405 9.405 0 00-5.575-2.666c.021-.367.032-.735.032-1.101C51.704 16.374 43.33 8 33.037 8c-8.41 0-15.689 5.537-17.958 13.555C8.807 22.237 4 27.564 4 33.961c0 6.862 5.583 12.48 12.445 12.48h7.259a1.037 1.037 0 000-2.075h-7.26c-5.718 0-10.37-4.687-10.37-10.405 0-5.546 4.336-10.113 9.87-10.376.461-.022.851-.354.96-.802a16.54 16.54 0 0116.133-12.704c9.149 0 16.593 7.441 16.593 16.59 0 .652-.038 1.309-.114 1.953-.034.295.059.623.255.844.197.221.48.381.775.381h.002c1.993 0 3.853.722 5.24 2.095a7.207 7.207 0 012.138 5.147c0 4.003-3.257 7.277-7.26 7.277H42.37a1.037 1.037 0 000 2.074h8.297c5.146 0 9.333-4.222 9.333-9.368 0-2.5-.977-4.881-2.753-6.638z"
          fill="#C2C2C2"
        />
        <path
          clipRule="evenodd"
          d="M33 31.852a1 1 0 011 1v22a1 1 0 11-2 0v-22a1 1 0 011-1z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
        <path
          clipRule="evenodd"
          d="M39.732 39.12a1 1 0 01-1.413.05l-6-5.586a1 1 0 011.362-1.464l6 5.586a1 1 0 01.05 1.413z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
        <path
          clipRule="evenodd"
          d="M26.268 39.12a1 1 0 001.413.05l6-5.586a1 1 0 00-1.362-1.464l-6 5.586a1 1 0 00-.05 1.413z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
      </svg>
    </SvgUpload>
    <div
      className="info-column"
    >
      <div
        className="info primary"
      >
        Перетащите или
         
        <label>
          <input
            className="input"
            data-testid="upload-area:input"
            onChange={[Function]}
            type="file"
          />
          <ForwardRef(Link)
            data-testid="upload-area:anchor"
            pseudo={true}
          >
            <a
              className="link basic-blue"
              data-testid="upload-area:anchor"
              role="button"
              tabIndex={0}
            >
              загрузите 
              скан
            </a>
          </ForwardRef(Link)>
        </label>
      </div>
      <div
        className="info secondary"
      >
        1 файл, формат PDF, JPG, PNG, до 4 Mb
      </div>
    </div>
  </div>
</UploadArea>
`;

exports[`UploadArea should handle drag events to highlight area 3`] = `
<UploadArea
  fileRole="скан"
  formats="PDF, JPG, PNG"
  onSelect={[MockFunction]}
  sizeLimit="4 Mb"
>
  <div
    className="root"
    data-testid="upload-area"
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    <SvgUpload
      fill="#c2c2c2"
    >
      <svg
        fill="#c2c2c2"
        height={64}
        viewBox="0 0 64 64"
        width={64}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M57.247 30.434a9.405 9.405 0 00-5.575-2.666c.021-.367.032-.735.032-1.101C51.704 16.374 43.33 8 33.037 8c-8.41 0-15.689 5.537-17.958 13.555C8.807 22.237 4 27.564 4 33.961c0 6.862 5.583 12.48 12.445 12.48h7.259a1.037 1.037 0 000-2.075h-7.26c-5.718 0-10.37-4.687-10.37-10.405 0-5.546 4.336-10.113 9.87-10.376.461-.022.851-.354.96-.802a16.54 16.54 0 0116.133-12.704c9.149 0 16.593 7.441 16.593 16.59 0 .652-.038 1.309-.114 1.953-.034.295.059.623.255.844.197.221.48.381.775.381h.002c1.993 0 3.853.722 5.24 2.095a7.207 7.207 0 012.138 5.147c0 4.003-3.257 7.277-7.26 7.277H42.37a1.037 1.037 0 000 2.074h8.297c5.146 0 9.333-4.222 9.333-9.368 0-2.5-.977-4.881-2.753-6.638z"
          fill="#C2C2C2"
        />
        <path
          clipRule="evenodd"
          d="M33 31.852a1 1 0 011 1v22a1 1 0 11-2 0v-22a1 1 0 011-1z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
        <path
          clipRule="evenodd"
          d="M39.732 39.12a1 1 0 01-1.413.05l-6-5.586a1 1 0 011.362-1.464l6 5.586a1 1 0 01.05 1.413z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
        <path
          clipRule="evenodd"
          d="M26.268 39.12a1 1 0 001.413.05l6-5.586a1 1 0 00-1.362-1.464l-6 5.586a1 1 0 00-.05 1.413z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
      </svg>
    </SvgUpload>
    <div
      className="info-column"
    >
      <div
        className="info primary"
      >
        Перетащите или
         
        <label>
          <input
            className="input"
            data-testid="upload-area:input"
            onChange={[Function]}
            type="file"
          />
          <ForwardRef(Link)
            data-testid="upload-area:anchor"
            pseudo={true}
          >
            <a
              className="link basic-blue"
              data-testid="upload-area:anchor"
              role="button"
              tabIndex={0}
            >
              загрузите 
              скан
            </a>
          </ForwardRef(Link)>
        </label>
      </div>
      <div
        className="info secondary"
      >
        1 файл, формат PDF, JPG, PNG, до 4 Mb
      </div>
    </div>
  </div>
</UploadArea>
`;

exports[`UploadArea should handle drag events to highlight area 4`] = `
<UploadArea
  fileRole="скан"
  formats="PDF, JPG, PNG"
  onSelect={[MockFunction]}
  sizeLimit="4 Mb"
>
  <div
    className="root active"
    data-testid="upload-area"
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    <SvgUpload
      fill="#c2c2c2"
    >
      <svg
        fill="#c2c2c2"
        height={64}
        viewBox="0 0 64 64"
        width={64}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M57.247 30.434a9.405 9.405 0 00-5.575-2.666c.021-.367.032-.735.032-1.101C51.704 16.374 43.33 8 33.037 8c-8.41 0-15.689 5.537-17.958 13.555C8.807 22.237 4 27.564 4 33.961c0 6.862 5.583 12.48 12.445 12.48h7.259a1.037 1.037 0 000-2.075h-7.26c-5.718 0-10.37-4.687-10.37-10.405 0-5.546 4.336-10.113 9.87-10.376.461-.022.851-.354.96-.802a16.54 16.54 0 0116.133-12.704c9.149 0 16.593 7.441 16.593 16.59 0 .652-.038 1.309-.114 1.953-.034.295.059.623.255.844.197.221.48.381.775.381h.002c1.993 0 3.853.722 5.24 2.095a7.207 7.207 0 012.138 5.147c0 4.003-3.257 7.277-7.26 7.277H42.37a1.037 1.037 0 000 2.074h8.297c5.146 0 9.333-4.222 9.333-9.368 0-2.5-.977-4.881-2.753-6.638z"
          fill="#C2C2C2"
        />
        <path
          clipRule="evenodd"
          d="M33 31.852a1 1 0 011 1v22a1 1 0 11-2 0v-22a1 1 0 011-1z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
        <path
          clipRule="evenodd"
          d="M39.732 39.12a1 1 0 01-1.413.05l-6-5.586a1 1 0 011.362-1.464l6 5.586a1 1 0 01.05 1.413z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
        <path
          clipRule="evenodd"
          d="M26.268 39.12a1 1 0 001.413.05l6-5.586a1 1 0 00-1.362-1.464l-6 5.586a1 1 0 00-.05 1.413z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
      </svg>
    </SvgUpload>
    <div
      className="info-column"
    >
      <div
        className="info primary"
      >
        Перетащите или
         
        <label>
          <input
            className="input"
            data-testid="upload-area:input"
            onChange={[Function]}
            type="file"
          />
          <ForwardRef(Link)
            data-testid="upload-area:anchor"
            pseudo={true}
          >
            <a
              className="link basic-blue"
              data-testid="upload-area:anchor"
              role="button"
              tabIndex={0}
            >
              загрузите 
              скан
            </a>
          </ForwardRef(Link)>
        </label>
      </div>
      <div
        className="info secondary"
      >
        1 файл, формат PDF, JPG, PNG, до 4 Mb
      </div>
    </div>
  </div>
</UploadArea>
`;

exports[`UploadArea should handle props 1`] = `
<UploadArea
  countLimit={12}
  fileRole="скан"
  formats="PDF, JPG, PNG"
  sizeLimit="4 Mb"
>
  <div
    className="root"
    data-testid="upload-area"
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    <SvgUpload
      fill="#c2c2c2"
    >
      <svg
        fill="#c2c2c2"
        height={64}
        viewBox="0 0 64 64"
        width={64}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M57.247 30.434a9.405 9.405 0 00-5.575-2.666c.021-.367.032-.735.032-1.101C51.704 16.374 43.33 8 33.037 8c-8.41 0-15.689 5.537-17.958 13.555C8.807 22.237 4 27.564 4 33.961c0 6.862 5.583 12.48 12.445 12.48h7.259a1.037 1.037 0 000-2.075h-7.26c-5.718 0-10.37-4.687-10.37-10.405 0-5.546 4.336-10.113 9.87-10.376.461-.022.851-.354.96-.802a16.54 16.54 0 0116.133-12.704c9.149 0 16.593 7.441 16.593 16.59 0 .652-.038 1.309-.114 1.953-.034.295.059.623.255.844.197.221.48.381.775.381h.002c1.993 0 3.853.722 5.24 2.095a7.207 7.207 0 012.138 5.147c0 4.003-3.257 7.277-7.26 7.277H42.37a1.037 1.037 0 000 2.074h8.297c5.146 0 9.333-4.222 9.333-9.368 0-2.5-.977-4.881-2.753-6.638z"
          fill="#C2C2C2"
        />
        <path
          clipRule="evenodd"
          d="M33 31.852a1 1 0 011 1v22a1 1 0 11-2 0v-22a1 1 0 011-1z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
        <path
          clipRule="evenodd"
          d="M39.732 39.12a1 1 0 01-1.413.05l-6-5.586a1 1 0 011.362-1.464l6 5.586a1 1 0 01.05 1.413z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
        <path
          clipRule="evenodd"
          d="M26.268 39.12a1 1 0 001.413.05l6-5.586a1 1 0 00-1.362-1.464l-6 5.586a1 1 0 00-.05 1.413z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
      </svg>
    </SvgUpload>
    <div
      className="info-column"
    >
      <div
        className="info primary"
      >
        Перетащите или
         
        <label>
          <input
            className="input"
            data-testid="upload-area:input"
            onChange={[Function]}
            type="file"
          />
          <ForwardRef(Link)
            data-testid="upload-area:anchor"
            pseudo={true}
          >
            <a
              className="link basic-blue"
              data-testid="upload-area:anchor"
              role="button"
              tabIndex={0}
            >
              загрузите 
              скан
            </a>
          </ForwardRef(Link)>
        </label>
      </div>
      <div
        className="info secondary"
      >
        12 файлов, формат PDF, JPG, PNG, до 4 Mb
      </div>
    </div>
  </div>
</UploadArea>
`;

exports[`UploadArea should render different visual variants 1`] = `
<UploadArea
  fileRole="фото"
>
  <div
    className="root"
    data-testid="upload-area"
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    <SvgUpload
      fill="#c2c2c2"
    >
      <svg
        fill="#c2c2c2"
        height={64}
        viewBox="0 0 64 64"
        width={64}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M57.247 30.434a9.405 9.405 0 00-5.575-2.666c.021-.367.032-.735.032-1.101C51.704 16.374 43.33 8 33.037 8c-8.41 0-15.689 5.537-17.958 13.555C8.807 22.237 4 27.564 4 33.961c0 6.862 5.583 12.48 12.445 12.48h7.259a1.037 1.037 0 000-2.075h-7.26c-5.718 0-10.37-4.687-10.37-10.405 0-5.546 4.336-10.113 9.87-10.376.461-.022.851-.354.96-.802a16.54 16.54 0 0116.133-12.704c9.149 0 16.593 7.441 16.593 16.59 0 .652-.038 1.309-.114 1.953-.034.295.059.623.255.844.197.221.48.381.775.381h.002c1.993 0 3.853.722 5.24 2.095a7.207 7.207 0 012.138 5.147c0 4.003-3.257 7.277-7.26 7.277H42.37a1.037 1.037 0 000 2.074h8.297c5.146 0 9.333-4.222 9.333-9.368 0-2.5-.977-4.881-2.753-6.638z"
          fill="#C2C2C2"
        />
        <path
          clipRule="evenodd"
          d="M33 31.852a1 1 0 011 1v22a1 1 0 11-2 0v-22a1 1 0 011-1z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
        <path
          clipRule="evenodd"
          d="M39.732 39.12a1 1 0 01-1.413.05l-6-5.586a1 1 0 011.362-1.464l6 5.586a1 1 0 01.05 1.413z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
        <path
          clipRule="evenodd"
          d="M26.268 39.12a1 1 0 001.413.05l6-5.586a1 1 0 00-1.362-1.464l-6 5.586a1 1 0 00-.05 1.413z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
      </svg>
    </SvgUpload>
    <div
      className="info-column"
    >
      <div
        className="info primary"
      >
        Перетащите или
         
        <label>
          <input
            className="input"
            data-testid="upload-area:input"
            onChange={[Function]}
            type="file"
          />
          <ForwardRef(Link)
            data-testid="upload-area:anchor"
            pseudo={true}
          >
            <a
              className="link basic-blue"
              data-testid="upload-area:anchor"
              role="button"
              tabIndex={0}
            >
              загрузите 
              фото
            </a>
          </ForwardRef(Link)>
        </label>
      </div>
      <div
        className="info secondary"
      >
        1 файл, до 2 Mb
      </div>
    </div>
  </div>
</UploadArea>
`;

exports[`UploadArea should render different visual variants 2`] = `
<UploadArea
  fileRole="архив"
  formats="PDF, JPG, PNG"
>
  <div
    className="root"
    data-testid="upload-area"
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    <SvgUpload
      fill="#c2c2c2"
    >
      <svg
        fill="#c2c2c2"
        height={64}
        viewBox="0 0 64 64"
        width={64}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M57.247 30.434a9.405 9.405 0 00-5.575-2.666c.021-.367.032-.735.032-1.101C51.704 16.374 43.33 8 33.037 8c-8.41 0-15.689 5.537-17.958 13.555C8.807 22.237 4 27.564 4 33.961c0 6.862 5.583 12.48 12.445 12.48h7.259a1.037 1.037 0 000-2.075h-7.26c-5.718 0-10.37-4.687-10.37-10.405 0-5.546 4.336-10.113 9.87-10.376.461-.022.851-.354.96-.802a16.54 16.54 0 0116.133-12.704c9.149 0 16.593 7.441 16.593 16.59 0 .652-.038 1.309-.114 1.953-.034.295.059.623.255.844.197.221.48.381.775.381h.002c1.993 0 3.853.722 5.24 2.095a7.207 7.207 0 012.138 5.147c0 4.003-3.257 7.277-7.26 7.277H42.37a1.037 1.037 0 000 2.074h8.297c5.146 0 9.333-4.222 9.333-9.368 0-2.5-.977-4.881-2.753-6.638z"
          fill="#C2C2C2"
        />
        <path
          clipRule="evenodd"
          d="M33 31.852a1 1 0 011 1v22a1 1 0 11-2 0v-22a1 1 0 011-1z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
        <path
          clipRule="evenodd"
          d="M39.732 39.12a1 1 0 01-1.413.05l-6-5.586a1 1 0 011.362-1.464l6 5.586a1 1 0 01.05 1.413z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
        <path
          clipRule="evenodd"
          d="M26.268 39.12a1 1 0 001.413.05l6-5.586a1 1 0 00-1.362-1.464l-6 5.586a1 1 0 00-.05 1.413z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
      </svg>
    </SvgUpload>
    <div
      className="info-column"
    >
      <div
        className="info primary"
      >
        Перетащите или
         
        <label>
          <input
            className="input"
            data-testid="upload-area:input"
            onChange={[Function]}
            type="file"
          />
          <ForwardRef(Link)
            data-testid="upload-area:anchor"
            pseudo={true}
          >
            <a
              className="link basic-blue"
              data-testid="upload-area:anchor"
              role="button"
              tabIndex={0}
            >
              загрузите 
              архив
            </a>
          </ForwardRef(Link)>
        </label>
      </div>
      <div
        className="info secondary"
      >
        1 файл, формат PDF, JPG, PNG, до 2 Mb
      </div>
    </div>
  </div>
</UploadArea>
`;

exports[`UploadArea should render different visual variants 3`] = `
<UploadArea
  fileRole="документ"
  multiple={true}
>
  <div
    className="root"
    data-testid="upload-area"
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    <SvgUpload
      fill="#c2c2c2"
    >
      <svg
        fill="#c2c2c2"
        height={64}
        viewBox="0 0 64 64"
        width={64}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M57.247 30.434a9.405 9.405 0 00-5.575-2.666c.021-.367.032-.735.032-1.101C51.704 16.374 43.33 8 33.037 8c-8.41 0-15.689 5.537-17.958 13.555C8.807 22.237 4 27.564 4 33.961c0 6.862 5.583 12.48 12.445 12.48h7.259a1.037 1.037 0 000-2.075h-7.26c-5.718 0-10.37-4.687-10.37-10.405 0-5.546 4.336-10.113 9.87-10.376.461-.022.851-.354.96-.802a16.54 16.54 0 0116.133-12.704c9.149 0 16.593 7.441 16.593 16.59 0 .652-.038 1.309-.114 1.953-.034.295.059.623.255.844.197.221.48.381.775.381h.002c1.993 0 3.853.722 5.24 2.095a7.207 7.207 0 012.138 5.147c0 4.003-3.257 7.277-7.26 7.277H42.37a1.037 1.037 0 000 2.074h8.297c5.146 0 9.333-4.222 9.333-9.368 0-2.5-.977-4.881-2.753-6.638z"
          fill="#C2C2C2"
        />
        <path
          clipRule="evenodd"
          d="M33 31.852a1 1 0 011 1v22a1 1 0 11-2 0v-22a1 1 0 011-1z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
        <path
          clipRule="evenodd"
          d="M39.732 39.12a1 1 0 01-1.413.05l-6-5.586a1 1 0 011.362-1.464l6 5.586a1 1 0 01.05 1.413z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
        <path
          clipRule="evenodd"
          d="M26.268 39.12a1 1 0 001.413.05l6-5.586a1 1 0 00-1.362-1.464l-6 5.586a1 1 0 00-.05 1.413z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
      </svg>
    </SvgUpload>
    <div
      className="info-column"
    >
      <div
        className="info primary"
      >
        Перетащите или
         
        <label>
          <input
            className="input"
            data-testid="upload-area:input"
            multiple={true}
            onChange={[Function]}
            type="file"
          />
          <ForwardRef(Link)
            data-testid="upload-area:anchor"
            pseudo={true}
          >
            <a
              className="link basic-blue"
              data-testid="upload-area:anchor"
              role="button"
              tabIndex={0}
            >
              загрузите 
              документ
            </a>
          </ForwardRef(Link)>
        </label>
      </div>
      <div
        className="info secondary"
      >
        До 2 Mb
      </div>
    </div>
  </div>
</UploadArea>
`;

exports[`UploadArea should render different visual variants 4`] = `
<UploadArea
  fileRole="скан"
  formats="PDF, JPG, PNG"
  multiple={true}
>
  <div
    className="root"
    data-testid="upload-area"
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    <SvgUpload
      fill="#c2c2c2"
    >
      <svg
        fill="#c2c2c2"
        height={64}
        viewBox="0 0 64 64"
        width={64}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M57.247 30.434a9.405 9.405 0 00-5.575-2.666c.021-.367.032-.735.032-1.101C51.704 16.374 43.33 8 33.037 8c-8.41 0-15.689 5.537-17.958 13.555C8.807 22.237 4 27.564 4 33.961c0 6.862 5.583 12.48 12.445 12.48h7.259a1.037 1.037 0 000-2.075h-7.26c-5.718 0-10.37-4.687-10.37-10.405 0-5.546 4.336-10.113 9.87-10.376.461-.022.851-.354.96-.802a16.54 16.54 0 0116.133-12.704c9.149 0 16.593 7.441 16.593 16.59 0 .652-.038 1.309-.114 1.953-.034.295.059.623.255.844.197.221.48.381.775.381h.002c1.993 0 3.853.722 5.24 2.095a7.207 7.207 0 012.138 5.147c0 4.003-3.257 7.277-7.26 7.277H42.37a1.037 1.037 0 000 2.074h8.297c5.146 0 9.333-4.222 9.333-9.368 0-2.5-.977-4.881-2.753-6.638z"
          fill="#C2C2C2"
        />
        <path
          clipRule="evenodd"
          d="M33 31.852a1 1 0 011 1v22a1 1 0 11-2 0v-22a1 1 0 011-1z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
        <path
          clipRule="evenodd"
          d="M39.732 39.12a1 1 0 01-1.413.05l-6-5.586a1 1 0 011.362-1.464l6 5.586a1 1 0 01.05 1.413z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
        <path
          clipRule="evenodd"
          d="M26.268 39.12a1 1 0 001.413.05l6-5.586a1 1 0 00-1.362-1.464l-6 5.586a1 1 0 00-.05 1.413z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
      </svg>
    </SvgUpload>
    <div
      className="info-column"
    >
      <div
        className="info primary"
      >
        Перетащите или
         
        <label>
          <input
            className="input"
            data-testid="upload-area:input"
            multiple={true}
            onChange={[Function]}
            type="file"
          />
          <ForwardRef(Link)
            data-testid="upload-area:anchor"
            pseudo={true}
          >
            <a
              className="link basic-blue"
              data-testid="upload-area:anchor"
              role="button"
              tabIndex={0}
            >
              загрузите 
              скан
            </a>
          </ForwardRef(Link)>
        </label>
      </div>
      <div
        className="info secondary"
      >
        Формат PDF, JPG, PNG, до 2 Mb
      </div>
    </div>
  </div>
</UploadArea>
`;

exports[`UploadArea should render different visual variants 5`] = `
<UploadArea
  failed={true}
  fileRole="изображение"
  formats="PDF, JPG, PNG"
  multiple={true}
>
  <div
    className="root"
    data-testid="upload-area"
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    <SvgUpload
      fill="#c2c2c2"
    >
      <svg
        fill="#c2c2c2"
        height={64}
        viewBox="0 0 64 64"
        width={64}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M57.247 30.434a9.405 9.405 0 00-5.575-2.666c.021-.367.032-.735.032-1.101C51.704 16.374 43.33 8 33.037 8c-8.41 0-15.689 5.537-17.958 13.555C8.807 22.237 4 27.564 4 33.961c0 6.862 5.583 12.48 12.445 12.48h7.259a1.037 1.037 0 000-2.075h-7.26c-5.718 0-10.37-4.687-10.37-10.405 0-5.546 4.336-10.113 9.87-10.376.461-.022.851-.354.96-.802a16.54 16.54 0 0116.133-12.704c9.149 0 16.593 7.441 16.593 16.59 0 .652-.038 1.309-.114 1.953-.034.295.059.623.255.844.197.221.48.381.775.381h.002c1.993 0 3.853.722 5.24 2.095a7.207 7.207 0 012.138 5.147c0 4.003-3.257 7.277-7.26 7.277H42.37a1.037 1.037 0 000 2.074h8.297c5.146 0 9.333-4.222 9.333-9.368 0-2.5-.977-4.881-2.753-6.638z"
          fill="#C2C2C2"
        />
        <path
          clipRule="evenodd"
          d="M33 31.852a1 1 0 011 1v22a1 1 0 11-2 0v-22a1 1 0 011-1z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
        <path
          clipRule="evenodd"
          d="M39.732 39.12a1 1 0 01-1.413.05l-6-5.586a1 1 0 011.362-1.464l6 5.586a1 1 0 01.05 1.413z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
        <path
          clipRule="evenodd"
          d="M26.268 39.12a1 1 0 001.413.05l6-5.586a1 1 0 00-1.362-1.464l-6 5.586a1 1 0 00-.05 1.413z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
      </svg>
    </SvgUpload>
    <div
      className="info-column"
    >
      <div
        className="info primary"
      >
        Перетащите или
         
        <label>
          <input
            className="input"
            data-testid="upload-area:input"
            multiple={true}
            onChange={[Function]}
            type="file"
          />
          <ForwardRef(Link)
            data-testid="upload-area:anchor"
            pseudo={true}
          >
            <a
              className="link basic-blue"
              data-testid="upload-area:anchor"
              role="button"
              tabIndex={0}
            >
              загрузите 
              изображение
            </a>
          </ForwardRef(Link)>
        </label>
      </div>
      <div
        className="info secondary failed"
      >
        Формат PDF, JPG, PNG, до 2 Mb
      </div>
    </div>
  </div>
</UploadArea>
`;

exports[`UploadArea should renders correctly 1`] = `
<UploadArea>
  <div
    className="root"
    data-testid="upload-area"
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    onDragOver={[Function]}
    onDrop={[Function]}
  >
    <SvgUpload
      fill="#c2c2c2"
    >
      <svg
        fill="#c2c2c2"
        height={64}
        viewBox="0 0 64 64"
        width={64}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M57.247 30.434a9.405 9.405 0 00-5.575-2.666c.021-.367.032-.735.032-1.101C51.704 16.374 43.33 8 33.037 8c-8.41 0-15.689 5.537-17.958 13.555C8.807 22.237 4 27.564 4 33.961c0 6.862 5.583 12.48 12.445 12.48h7.259a1.037 1.037 0 000-2.075h-7.26c-5.718 0-10.37-4.687-10.37-10.405 0-5.546 4.336-10.113 9.87-10.376.461-.022.851-.354.96-.802a16.54 16.54 0 0116.133-12.704c9.149 0 16.593 7.441 16.593 16.59 0 .652-.038 1.309-.114 1.953-.034.295.059.623.255.844.197.221.48.381.775.381h.002c1.993 0 3.853.722 5.24 2.095a7.207 7.207 0 012.138 5.147c0 4.003-3.257 7.277-7.26 7.277H42.37a1.037 1.037 0 000 2.074h8.297c5.146 0 9.333-4.222 9.333-9.368 0-2.5-.977-4.881-2.753-6.638z"
          fill="#C2C2C2"
        />
        <path
          clipRule="evenodd"
          d="M33 31.852a1 1 0 011 1v22a1 1 0 11-2 0v-22a1 1 0 011-1z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
        <path
          clipRule="evenodd"
          d="M39.732 39.12a1 1 0 01-1.413.05l-6-5.586a1 1 0 011.362-1.464l6 5.586a1 1 0 01.05 1.413z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
        <path
          clipRule="evenodd"
          d="M26.268 39.12a1 1 0 001.413.05l6-5.586a1 1 0 00-1.362-1.464l-6 5.586a1 1 0 00-.05 1.413z"
          fill="#C2C2C2"
          fillRule="evenodd"
        />
      </svg>
    </SvgUpload>
    <div
      className="info-column"
    >
      <div
        className="info primary"
      >
        Перетащите или
         
        <label>
          <input
            className="input"
            data-testid="upload-area:input"
            onChange={[Function]}
            type="file"
          />
          <ForwardRef(Link)
            data-testid="upload-area:anchor"
            pseudo={true}
          >
            <a
              className="link basic-blue"
              data-testid="upload-area:anchor"
              role="button"
              tabIndex={0}
            >
              загрузите 
              файл
            </a>
          </ForwardRef(Link)>
        </label>
      </div>
      <div
        className="info secondary"
      >
        1 файл, до 2 Mb
      </div>
    </div>
  </div>
</UploadArea>
`;
